logs/easyspider.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/easyspider'...
Listing './lib/python3.5/site-packages/easyspider/commands'...
Listing './lib/python3.5/site-packages/easyspider/core'...
Compiling './lib/python3.5/site-packages/easyspider/core/cmdline.py'...
***   File "./lib/python3.5/site-packages/easyspider/core/cmdline.py", line 74
    print "settings is None \n\n\n"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easyspider/core/easyScraper.py'...
***   File "./lib/python3.5/site-packages/easyspider/core/easyScraper.py", line 88
    print "\n\n\n add request_fingerprint before !..."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/etl'...
Compiling './lib/python3.5/site-packages/easyspider/etl/DBService.py'...
***   File "./lib/python3.5/site-packages/easyspider/etl/DBService.py", line 262
    print "all mongo dbs are %s" % server.list_all_dbs()
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easyspider/middlewares'...
Compiling './lib/python3.5/site-packages/easyspider/middlewares/httperror.py'...
***   File "./lib/python3.5/site-packages/easyspider/middlewares/httperror.py", line 45
    print "\n\n\nin record file\n\n\n"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/monitor'...
Compiling './lib/python3.5/site-packages/easyspider/monitor/base_log_monitor.py'...
***   File "./lib/python3.5/site-packages/easyspider/monitor/base_log_monitor.py", line 56
    print "not target file %s" % modified_file_name
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easyspider/monitor/log_monitor_server.py'...
***   File "./lib/python3.5/site-packages/easyspider/monitor/log_monitor_server.py", line 20
    print "SKIP, modified file %s in ignore file list" % modified_file
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/pipelines'...
Compiling './lib/python3.5/site-packages/easyspider/pipelines/mysqlPipeline.py'...
***   File "./lib/python3.5/site-packages/easyspider/pipelines/mysqlPipeline.py", line 48
    print "\n\n\n\n\n%s\n" % item
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/settings'...
Listing './lib/python3.5/site-packages/easyspider/spiders'...
Compiling './lib/python3.5/site-packages/easyspider/spiders/easyCrawlSpider.py'...
***   File "./lib/python3.5/site-packages/easyspider/spiders/easyCrawlSpider.py", line 38
    print "\n\nin spider next_request~~~  to get new start tasks"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/template_dir'...
Listing './lib/python3.5/site-packages/easyspider/template_dir/crawler'...
Listing './lib/python3.5/site-packages/easyspider/template_dir/crawler/middlewares'...
Listing './lib/python3.5/site-packages/easyspider/template_dir/crawler/pipelines'...
Listing './lib/python3.5/site-packages/easyspider/template_dir/crawler/spiders'...
Listing './lib/python3.5/site-packages/easyspider/template_dir/crawler/spiders/baidu'...
Compiling './lib/python3.5/site-packages/easyspider/template_dir/crawler/spiders/baidu/baidu_2.py'...
***   File "./lib/python3.5/site-packages/easyspider/template_dir/crawler/spiders/baidu/baidu_2.py", line 15
    print "crawled %s" % response.url
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyspider/template_dir/etl'...
Listing './lib/python3.5/site-packages/easyspider/utils'...
Compiling './lib/python3.5/site-packages/easyspider/utils/DBService.py'...
***   File "./lib/python3.5/site-packages/easyspider/utils/DBService.py", line 268
    print "all mongo dbs are %s" % server.list_all_dbs()
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/easyspider/utils/tools.py'...
***   File "./lib/python3.5/site-packages/easyspider/utils/tools.py", line 7
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/easyspider/utils/userAgentList.py'...
***   File "./lib/python3.5/site-packages/easyspider/utils/userAgentList.py", line 171
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 4220-4224: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/easyspider/web_ui'...
Listing './lib/python3.5/site-packages/easyspider/web_ui/templates'...
Listing './lib/python3.5/site-packages/easyspider-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
